--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "mysql": "^2.13.0",
-    "sequelize": "^3.30.4"
+    "sequelize": ">=5.3.0"
   }
 }
